Some spacing and coloring fixes, removed "experience ai's future"

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -455,15 +455,22 @@ body {
   /* position: absolute; */
   left: 137px;
   top: 18px;
+  /* justify-content: center; */
+  /* align-items: center; */
+  overflow: hidden;
 }
 
 .partner-feature .main-feature-logo {
   /* position: absolute; */
   /* right: 256px;
   top: 51px; */
-  min-width: 488px;
-  max-height: 155px;
-  margin-top: 3%;
+  width: auto;
+  min-height: 155px;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  display: block;
+  /* margin-top: 3%; */
 }
  
 .partner-feature .main-partner-text {
@@ -1545,10 +1552,10 @@ Sixth Section Change Gradient
 }
 
 .dark-mode .sixth-section{
-  background: linear-gradient(180deg, #3C3C80 0%, #171456 100%);
-
+  background: linear-gradient(180deg, #3C3C80 0%, #171456 37%);
 
 }
+
 
 .dark-mode .footer {
   display: flex;
